tests/spec/emit/snapshots/select_receive_aliased_option_patterns.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  import "go:fmt"
  
  type OptInt = Option<int>
  
  fn test() {
    let ch = Channel.buffered<int>(2)
    ch.send(41)
    ch.send(42)
    select {
      let OptInt.Some(first) = ch.receive() => fmt.Println(first),
      _ => {},
    }
    select {
      match ch.receive() {
        OptInt.Some(val) => fmt.Println(val),
        OptInt.None => fmt.Println("closed"),
      },
    }
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

type OptInt = lisette.Option[int]

func test() {
	ch := make(chan int, 2)
	lisette.ChannelSend(ch, 41)
	lisette.ChannelSend(ch, 42)
	ch_1 := ch
	for {
		select {
		case first, ok := <-ch_1:
			if ok {
				fmt.Println(first)
			} else {
				ch_1 = nil
				continue
			}
		default:
		}
		break
	}
	select {
	case val, ok := <-ch:
		if ok {
			fmt.Println(val)
		} else {
			fmt.Println("closed")
		}
	}
}
