tests/spec/emit/snapshots/select_receive_discard.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  fn do_work() {}
  
  fn test() {
    let ch = Channel.new<int>();
  
    select {
      ch.receive() => do_work(),
      _ => {},
    }
  }
---
package main

func doWork() {}

func test() {
	ch := make(chan int)
	select {
	case <-ch:
		doWork()
	default:
	}
}
