tests/spec/emit/snapshots/select_receive_ok_variable_not_shadowed.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  import "go:fmt"
  
  fn test() {
    let ok = "everything is fine"
    let ch = Channel.buffered<int>(1)
    ch.send(42)
    select {
      match ch.receive() {
        Some(val) => {
          fmt.Println(f"received: {val}")
          fmt.Println(f"ok is: {ok}")
        },
        None => fmt.Println("closed"),
      },
    }
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func test() {
	ok := "everything is fine"
	ch := make(chan int, 1)
	lisette.ChannelSend(ch, 42)
	select {
	case val, ok_1 := <-ch:
		if ok_1 {
			fmt.Printf("received: %d\n", val)
			fmt.Println("ok is: " + ok)
		} else {
			fmt.Println("closed")
		}
	}
}
