tests/spec/emit/snapshots/select_receive_propagate_channel_operand.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn g() -> Result<int, string> { Ok(0) }
  
  fn f() -> Result<int, string> {
    let chans = [Channel.buffered<int>(1)]
    chans[0].send(7)
    let x = select {
      let Some(v) = chans[g()?].receive() => v,
      _ => 0,
    }
    Ok(x)
  }
  
  fn main() { let _ = f() }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func g() lisette.Result[int, string] {
	return lisette.MakeResultOk[int, string](0)
}

func f() lisette.Result[int, string] {
	chans := []chan int{make(chan int, 1)}
	lisette.ChannelSend(chans[0], 7)
	var x int
	check := g()
	if check.Tag != lisette.ResultOk {
		return check
	}
	ch := chans[check.OkVal]
	for {
		select {
		case v, ok := <-ch:
			if ok {
				x = v
			} else {
				ch = nil
				continue
			}
		default:
			x = 0
		}
		break
	}
	return lisette.MakeResultOk[int, string](x)
}

func main() {
	f()
}
