tests/spec/emit/snapshots/select_receive_ref_call_channel_operand.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn get_channel(ch: Ref<Channel<int>>) -> Ref<Channel<int>> {
    ch
  }
  
  fn test(ch: Ref<Channel<int>>) {
    select {
      let Some(v) = get_channel(ch).receive() => {
        let _ = v
      },
      _ => {},
    }
  }
---
package main

func getChannel(ch *chan int) *chan int {
	return ch
}

func test(ch *chan int) {
	ch_1 := *getChannel(ch)
	for {
		select {
		case v, ok := <-ch_1:
			if ok {
				_ = v
			} else {
				ch_1 = nil
				continue
			}
		default:
		}
		break
	}
}
