tests/spec/emit/snapshots/select_receive_unused_some_ok_check.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test() {
    let ch = Channel.new<int>()
    select {
      let Some(_v) = ch.receive() => {
        let _ = 1
      },
      _ => {},
    }
  }
---
package main

func test() {
	ch := make(chan int)
	ch_1 := ch
	for {
		select {
		case _, ok := <-ch_1:
			if !ok {
				ch_1 = nil
				continue
			}
		default:
		}
		break
	}
}
