tests/spec/emit/snapshots/select_receive_wildcard_some.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  fn test() {
    let ch = Channel.new<int>();
    select {
      let Some(_) = ch.receive() => {},
      _ => {},
    }
  }
---
package main

func test() {
	ch := make(chan int)
	ch_1 := ch
	for {
		select {
		case _, ok := <-ch_1:
			if !ok {
				ch_1 = nil
				continue
			}
		default:
		}
		break
	}
}
