tests/spec/emit/snapshots/select_retry_loop_hoists_send_values.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  fn mark(log: Channel<int>, tag: int) -> int {
    log.send(tag)
    tag
  }
  
  fn main() {
    let log = Channel.buffered<int>(8)
    let closed = Channel.new<int>()
    closed.close()
    let out_ch = Channel.new<int>()
  
    let _ = select {
      let Some(v) = closed.receive() => v,
      out_ch.send(mark(log, 1)) => 0,
      _ => -1,
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func mark(log chan int, tag int) int {
	lisette.ChannelSend(log, tag)
	return tag
}

func main() {
	log := make(chan int, 8)
	closed := make(chan int)
	lisette.ChannelClose(closed)
	out_ch := make(chan int)
	var tmp int
	ch := closed
	send_val := mark(log, 1)
	for {
		select {
		case v, ok := <-ch:
			if ok {
				tmp = v
			} else {
				ch = nil
				continue
			}
		case out_ch <- send_val:
			tmp = 0
		default:
			tmp = -1
		}
		break
	}
	_ = tmp
}
